--- a/tests/deployment/cliqz-backend.conf
+++ b/tests/deployment/cliqz-backend.conf
@@ -1,9 +1,9 @@
-description "cliqz-backend test server"
+description "{{ service_name }} test server"
 start on runlevel [2345]
 stop on shutdown
 
 pre-start script
-    while [ ! -f "/vagrant/tests/mockserver.py" ]
+    while [ ! -f "/vagrant/tests/mockserver/server.py" ]
     do
         echo "Waiting for /vagrant share..."
         /bin/sleep 2s
@@ -12,5 +12,5 @@ pre-start script
     echo "Share /vagrant available"
 end script
 
-exec python /vagrant/tests/mockserver.py
+exec python /vagrant/tests/mockserver/server.py {{ port }}
 respawn
