--- a/tests/deployment/inventory.ini
+++ b/tests/deployment/inventory.ini
@@ -2,5 +2,14 @@
 192.168.33.22
 
 [osx]
-# 127.0.0.1
-192.168.61.134
+192.168.33.33
+
+[win]
+192.168.33.139
+
+[win:vars]
+hosts_file=/cygdrive/c/Windows/System32/drivers/etc/hosts
+
+[nonwin:children]
+linux
+osx
