--- a/tests/deployment/bootstrap.yaml
+++ b/tests/deployment/bootstrap.yaml
@@ -130,6 +130,7 @@
       with_items: firefox_versions["releases"]
 
     - copy: src=mozmill-server.py
-            dest="/cygdrive/c/ProgramData/Microsoft/Windows/Start Menu/Programs/Startup"
-            mode=0777
+            dest="/cygdrive/c/Users/vagrant/AppData/Roaming/Microsoft/Windows/Start Menu/Programs/Startup"
+            # dest="/cygdrive/c/ProgramData/Microsoft/Windows/Start Menu/Programs/Startup"
+            # mode=0777
 
