mock tutorial page

--- a/tests/deployment/bootstrap.yaml
+++ b/tests/deployment/bootstrap.yaml
@@ -7,6 +7,7 @@
       with_items:
         - "{{ mock_api_host }}    webbeta.cliqz.com"
         - "{{ mock_api_host }}    logging.cliqz.com"
+        - "{{ mock_api_host }}    beta.cliqz.com"
         - "{{ mock_api_host }}    www.google.com"
 
 
