parallel test execution + advanced filtering

--- a/tests/deployment/inventory.ini
+++ b/tests/deployment/inventory.ini
@@ -1,11 +1,14 @@
+# Host description format: ip [[property=value] ..]
+# value should be shlex-parseable
+
 [linux]
-192.168.33.22
+192.168.33.22 version=12.04 tags=mock-server
 
 [osx]
-192.168.33.33
+192.168.33.33 version=maverics
 
 [win]
-192.168.33.140
+192.168.33.143 version="7"
 
 [win:vars]
 hosts_file=/cygdrive/c/Windows/System32/drivers/etc/hosts
