--- a/tests/deployment/bootstrap.yaml
+++ b/tests/deployment/bootstrap.yaml
@@ -1,16 +1,3 @@
-- hosts: nonwin
-  gather_facts: no
-  vars:
-    mock_api_host: 192.168.33.22
-  tasks:
-    - lineinfile: dest="{{ hosts_file | default('/etc/hosts') }}" line="{{ item }}" state=present
-      with_items:
-        - "{{ mock_api_host }}    webbeta.cliqz.com"
-        - "{{ mock_api_host }}    logging.cliqz.com"
-        - "{{ mock_api_host }}    beta.cliqz.com"
-        - "{{ mock_api_host }}    www.google.com"
-
-
 - hosts: linux
   gather_facts: no
   vars_files:
@@ -135,3 +122,20 @@
             # dest="/cygdrive/c/ProgramData/Microsoft/Windows/Start Menu/Programs/Startup"
             # mode=0777
 
+
+- hosts:
+  - all
+  # - nonwin
+  gather_facts: no
+  vars:
+    mock_api_host: 192.168.33.22
+  tasks:
+    - lineinfile: dest="{{ hosts_file | default('/etc/hosts') }}"
+                  line="{{ item }}"
+                  state=present
+                  mode=0777
+      with_items:
+        - "{{ mock_api_host }}    webbeta.cliqz.com"
+        - "{{ mock_api_host }}    logging.cliqz.com"
+        - "{{ mock_api_host }}    beta.cliqz.com"
+        - "{{ mock_api_host }}    www.google.com"
