--- a/tests/deployment/inventory.ini
+++ b/tests/deployment/inventory.ini
@@ -4,8 +4,8 @@
 [linux]
 192.168.33.22 version=12.04 tags=mock-server
 
-[osx]
-192.168.33.33 version=maverics
+# [osx]
+# 192.168.33.33 version=maverics
 
 [win]
 192.168.33.135 version="7"
