--- a/tools/brands.yaml
+++ b/tools/brands.yaml
@@ -4,34 +4,34 @@
 #   backend-based solution.
 
 brands:
-    Google: # this entry is a test of the domain matching - not intended for deployment
-        summary: Sitemap_Summary
-        match_domains:
-        -
-            '.*\.google.com'
-        rules:
-        -
-            # base entry is required and used to specify info for the cluster as a whole
-            category: base 
-            title: Google
-            url: https://www.google.com/
-            always_show: true
-            match:  # group all urls that match this condition with the base URL
-                domain: www.google.com
-                path: ^/$
-        -
-            category: Services
-            title:
-                var: domain
-                pattern: (.+)\.google\.com
-            match:
-                domain: .+\.google\.com
-            url:
-                scheme: https
-                domain: (.+)\.google\.com
-                path: /
-                query: ""
-                fragment: ""
+    # Google: # this entry is a test of the domain matching - not intended for deployment
+    #     summary: Sitemap_Summary
+    #     match_domains:
+    #     -
+    #         '.*\.google.com'
+    #     rules:
+    #     -
+    #         # base entry is required and used to specify info for the cluster as a whole
+    #         category: base 
+    #         title: Google
+    #         url: https://www.google.com/
+    #         always_show: true
+    #         match:  # group all urls that match this condition with the base URL
+    #             domain: www.google.com
+    #             path: ^/$
+    #     -
+    #         category: Services
+    #         title:
+    #             var: domain
+    #             pattern: (.+)\.google\.com
+    #         match:
+    #             domain: .+\.google\.com
+    #         url:
+    #             scheme: "https:"
+    #             domain: (.+)\.google\.com
+    #             path: /
+    #             query: ""
+    #             fragment: ""
 
     Youtube:
         summary: Sitemap_Summary
@@ -170,6 +170,7 @@ brands:
             match:
                 path: '^/[A-Za-z0-9\-]+/[A-Za-z0-9\-]+'
             url:
+                scheme: 'https:'
                 path: '^/[A-Za-z0-9\-]+/[A-Za-z0-9\-]+'
                 query: ''
                 fragment: ''
