--- a/tools/brands.yaml
+++ b/tools/brands.yaml
@@ -165,14 +165,14 @@ brands:
         -
             category:
                 var: path
-                pattern: '^/([A-Za-z0-9\-]+)/'
+                pattern: '^/([A-Za-z0-9\-\._~]+)/'
             title:
                 var: path
-                pattern: '^/([A-Za-z0-9\-]+/[A-Za-z0-9\-]+)'
+                pattern: '^/([A-Za-z0-9\-\._~]+/[A-Za-z0-9\-\._~]+)'
             match:
-                path: '^/[A-Za-z0-9\-]+/[A-Za-z0-9\-]+'
+                path: '^/[A-Za-z0-9\-\._~]+/[A-Za-z0-9\-\._~]+'
             url:
                 scheme: 'https:'
-                path: '^/[A-Za-z0-9\-]+/[A-Za-z0-9\-]+'
+                path: '^/[A-Za-z0-9\-\._~]+/[A-Za-z0-9\-\._~]+'
                 query: ''
                 fragment: ''
