Added support for retrieving scheme, path, query and fragment from url. Also added 'extra' parameter that combines path, query and fragment. Converted the rest of the code to use these new results.

--- a/tools/brands.yaml
+++ b/tools/brands.yaml
@@ -127,7 +127,7 @@ brands:
                 path: /playlist
                 query: list=[A-Za-z0-9]+
             url:
-                scheme: 'https'
+                scheme: 'https:'
                 query: list=[A-Za-z0-9]+
         -
             category: Videos
