added localStorage parameters for https://cliqz.com/support; removed beta.* from urls

--- a/tests/deployment/bootstrap.yaml
+++ b/tests/deployment/bootstrap.yaml
@@ -137,5 +137,5 @@
       with_items:
         - "{{ mock_api_host }}    webbeta.cliqz.com"
         - "{{ mock_api_host }}    logging.cliqz.com"
-        - "{{ mock_api_host }}    beta.cliqz.com"
+        - "{{ mock_api_host }}    cliqz.com"
         - "{{ mock_api_host }}    www.google.com"
