minor css change

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ mozilla-release
 *~
 *#
 cliqz@cliqz.com/modules/CliqzAutocomplete_testEZGeneric2.jsm
+cliqz@cliqz.com/modules/CliqzAutocomplete_ezGen2.jsm
