--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ mozilla-release
 cliqz@cliqz.com/tests/screenshots/lambda/node_modules
 bower_components
 cliqz@cliqz.com/modules/*_bck.jsm
+cliqz@cliqz.com/node_modules
