--- a/.gitignore
+++ b/.gitignore
@@ -11,13 +11,12 @@
 
 # build folders
 build/
-build/*
 .idea/
 
 # external components
-cliqz@cliqz.com/tests/screenshots/lambda/node_modules
+node_modules
 bower_components
 cliqz@cliqz.com/modules/*_bck.jsm
-cliqz@cliqz.com/node_modules
+
 
 *.scssc
