--- a/package.json
+++ b/package.json
@@ -16,7 +16,14 @@
     "grunt-contrib-copy": "^0.8.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-nodemon": "^0.4.0",
+    "grunt-run": "^0.4.0",
     "jade": "^1.9.2",
-    "request": "^2.55.0"
+    "request": "^2.55.0",
+    "gulp": "^3.9.0",
+    "gulp-clean": "^0.3.1",
+    "gulp-print": "^1.1.0",
+    "gulp-sass": "^2.0.4",
+    "gulp-sourcemaps": "^1.5.2",
+    "gulp-util": "^3.0.6"
   }
 }
