--- a/specific/firefox/cliqz@cliqz.com/tests/.jshintrc
+++ b/specific/firefox/cliqz@cliqz.com/tests/.jshintrc
@@ -1,3 +1,13 @@
 {
-  "predef": ["TESTS", "describe", "it", "chai"]
+  "predef": [
+    "TESTS",
+    "describe",
+    "it",
+    "chai",
+    "context",
+    "fillIn",
+    "afterEach",
+    "beforeEach",
+    "waitForResult"
+  ]
 }
