--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "grunt-contrib-watch": "^0.6.1",
     "grunt-nodemon": "^0.4.0",
     "grunt-run": "^0.4.0",
+    "grunt-shell": "^1.1.2",
     "jade": "^1.9.2",
     "request": "^2.55.0",
     "gulp": "^3.9.0",
