remove backup files and dummy consol logging

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@ cliqz@cliqz.com/modules/*_bck.jsm
 
 *.scssc
 generic/static/styles/css/
+specific/firefox/cliqz@cliqz.com/chrome/content/loyalty/*_bck.*
